# ChangeLog for dev-ruby/compass-rails
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*compass-rails-2.0.1 (17 Oct 2014)

  17 Oct 2014; Hans de Graaff <graaff@gentoo.org> +compass-rails-2.0.1.ebuild:
  Version bump.

*compass-rails-2.0.0 (11 Jul 2014)

  11 Jul 2014; Hans de Graaff <graaff@gentoo.org> +compass-rails-2.0.0.ebuild:
  Version bump.

  27 Jun 2014; Hans de Graaff <graaff@gentoo.org> compass-rails-1.1.7.ebuild:
  Add ruby20, ruby21.

  27 Jun 2014; Hans de Graaff <graaff@gentoo.org> -compass-rails-1.0.3.ebuild,
  -compass-rails-1.1.3.ebuild:
  Cleanup.

*compass-rails-1.1.7 (04 Apr 2014)

  04 Apr 2014; Hans de Graaff <graaff@gentoo.org> +compass-rails-1.1.7.ebuild:
  Version bump.

*compass-rails-1.1.3 (10 Jan 2014)

  10 Jan 2014; Hans de Graaff <graaff@gentoo.org> +compass-rails-1.1.3.ebuild:
  Version bump.

*compass-rails-1.0.3 (08 Jan 2013)

  08 Jan 2013; Hans de Graaff <graaff@gentoo.org> +compass-rails-1.0.3.ebuild,
  +metadata.xml:
  Initial import.
