@@ -1,3 +1,4 @@
 DIST compass-rails-1.1.7.gem 17408 SHA256 4ac64056ed7239d29ff77ac9c6cddb0990a4f2cf232ca2c0f4a165bd5cb60d2d SHA512 cb5052f21d3895faf81a161225372d86919fe999b044cad26fd0e031bbcbbcfb8fac5dcc9db05e32efb8bce44a6ba09c37bceb1c53d0384655b6e3adb85ad0f1 WHIRLPOOL c1c59b8b66f30703faee26915be4ae6bf4acbec2db9d9df5b6f5ae68369b75f54d453f996594303395115d37ffe5fca6958aa5b7d7e0aeebaa958549bb836b3d
 DIST compass-rails-2.0.0.gem 16384 SHA256 2ae64b44cab0a7e73143d12cbbcf9b03705182ed3cbfef1bced1392bccca9ace SHA512 926afc4433c225b2e42192d940a307b1e36e09ffdd15866abeddeec40e06ea5b7f79d9835422a02a4e41bbce55dc379491e1c255643d3e1891867ac6ff3ec2f0 WHIRLPOOL 724ca21348b0e1c004acb6c9d33b1982641c9311e85ef5421d94ca847e6598c961279702a3d43a5e431aa8a998f720f25704f6d149719596b50e34d4b62b2ccd
 DIST compass-rails-2.0.1.gem 16384 SHA256 2f78db306654290cd4bfb19aec4d013e7e0b8be329ad74d1dee78176a92a0999 SHA512 f1cd0710e93a653f3468335320c5655f725a19eac3a0c12744c795f7b23d431c7a28ccb2ef1091098ce761849f1d61987330767a843783208d74ca62fa9e405a WHIRLPOOL 254e53e62e84dd0794c5245591e35422258b049e0f7252d1681ea76da66bd4356ccd9f134dc9fcc1dd29ff2005e08aad7a68bbf6d6ab810a155543b7e779b562
+DIST compass-rails-2.0.2.gem 16896 SHA256 144fff68ae83bce47193abd9bc1afe683d1ff1dbb952d6cd25ca25fd357ccddb SHA512 1a13912c301dccc244133043abe15f6de38e184b30a2a71e8312ef63c3198ee87106eb3b5a38acfd82f76e22dcb700e32e1c53d5a87403739e7c5d8580dd8a46 WHIRLPOOL bc77f6b53b92c49f961c1b7946acf60f076c03e9758e326d3f8c49ccc3c2408ff8c7a651a0b83c2308a7df1769255a9d44b99030d61dd04268c5bd3c7a120ef8
