@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/compass-rails
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*compass-rails-2.0.2 (05 Jan 2015)
+
+  05 Jan 2015; Hans de Graaff <graaff@gentoo.org> +compass-rails-2.0.2.ebuild:
+  Version bump.
 
 *compass-rails-2.0.1 (17 Oct 2014)
 
